k8s-manifests/base/alert-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
      - name: alert-service
        image: YOUR_DOCKER_REGISTRY/alert-service:latest
