k8s-manifests/base/ingestion-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-service
  template:
    metadata:
      labels:
        app: ingestion-service
    spec:
      containers:
      - name: ingestion-service
        image: YOUR_DOCKER_REGISTRY/ingestion-service:latest
        ports:
        - containerPort: 80
