k8s-manifests/base/frontend-web-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-web
spec:
  selector:
    app: frontend-web
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
