k8s-manifests/base/ingestion-service-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
spec:
  selector:
    app: ingestion-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
